file 구 s3추가